<resources>
    <string name="app_name">Navigation Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="str_error_load_data">Error, Please check your Internet connection</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_tieudiem">Truyện tranh tiêu điểm</string>
    <string name="nav_moidang">Truyện mới đăng</string>
    <string name="nav_docnhieunhat">Truyện đọc nhiều nhất</string>
    <string name="nav_ngaunhien">Truyện Tranh Ngẫu Nhiên</string>
    <string name="nav_thongbao">Thông báo &amp; Sự kiện</string>
    <string name="nav_theloai">Thể loại truyện</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="activity_title_doc">Đọc truyện</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!--String for menu.-->
    <string name="tang_dan">Tăng dần</string>
    <string name="giam_dan">Giảm dần</string>
    <string name="str_loading">Loading...</string>
</resources>
