<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tieudiem"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_tieudiem" />
        <item
            android:id="@+id/nav_moidang"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_moidang" />
        <item
            android:id="@+id/nav_docnhieunhat"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_docnhieunhat" />

        <item
            android:id="@+id/nav_ngaunhiem"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_ngaunhien" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_thongbao" />
        <item
            android:id="@+id/nav_theloaitruyen"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_theloai" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
